# iLit

./: .gitignore  AGENTS.md  MP4-PLAN.md  PARITY-GATE.md  PLAN-DLX-ANIM.md  PLAN-TAURI-AUTH.md  PLAN-TOWARD-PY-PARITY.md  PLAN-TS-BASED-FEATURE-SWEEP.md  PLAN-TS-THREE-STYLE-INTERACTION.md  PLAN.md  README.md  TIME-WRAP-PLAN.md  TS-SWEEP-PARITY.md  global.d.ts  package.json  tsconfig.json
2x2table/: .gitignore  README.md  index.html  package.json  playwright.config.ts  tsconfig.json
2x2table/src/: App.svelte  app.css
2x2table/tests/e2e/: preview-steps.spec.ts  visual-idle.spec.ts
app/: package.json  playwright.config.ts  vite.config.ts
app/scripts/: check-dlxn-parity.ts
app/src/: app.d.ts
app/src/lib/: manim-api.ts  webgpu-manim-api.ts
app/src/lib/components/: ReadOnlyCodeMirror.svelte
app/src/lib/dlx/: index.ts  model.ts
app/src/lib/dlxn/: adapter.ts
app/src/lib/feature-sweep/: catalog.ts  manim-api.ts  registry.ts
app/src/lib/ts-feature-sweep/: catalog.ts  (+3 more)
app/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
app/tests/e2e/: axes-plotting.spec.ts  dlxn.spec.ts  gpu-sweep.spec.ts  images-svg-assets.spec.ts  mobjects-time-wrap.spec.ts  rate-functions-timing.spec.ts  ts-sweep.spec.ts
app/vite-plugins/: manimSourceIdPlugin.ts
backburner/: iterative-ts-sweep.md
misc/: doubly-linked-list.ts
py/: 16_path_to_path_morphing.py  19_geometry_and_text_primitives.py  20_doubly_linked_list_deletion.py
scripts/: render-py-mp4.ts  render-ts-mp4.ts  report-webgpu-parity.ts  tauri.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
(+70 files in other folders)
