[package]
name = "dlx_sv_tauri"
version = "0.1.0"
description = "Tauri wrapper for the dlx_sv SvelteKit app"
authors = ["cog"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
